apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-android-extensions'

android {
    compileSdkVersion 31
    buildToolsVersion '30.0.3'

    defaultConfig {
        minSdkVersion 23
        targetSdkVersion 31
        buildConfigField 'boolean', 'LICENSE_CHECK', 'false'
    }


    buildTypes {
        debug {
            debuggable true
        }
        release {
            debuggable false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/LICENSE.txt', 'META-INF/NOTICE.txt']
        }
    }

    lint {
        abortOnError false
    }
    namespace 'de.ebertp.HomeDroid'

}

dependencies {
    implementation fileTree(include: '*.jar', dir: 'libs')
    implementation project(':seekarc')

    implementation 'androidx.appcompat:appcompat:1.4.2'
    implementation 'com.j256.ormlite:ormlite-android:5.1'
    implementation 'com.github.machinarius:preferencefragment:0.1.2'
    implementation 'de.cketti.library.changelog:ckchangelog:1.2.2'
    implementation 'com.github.shell-software:fab:1.1.2'
    implementation 'com.github.bumptech.glide:glide:4.9.0' // API change in 4.x
    implementation 'asia.ivity.android:drag-sort-listview:1.0'
    implementation 'com.facebook.stetho:stetho:1.5.1'
    implementation 'com.github.QuadFlask:colorpicker:0.0.13'
    implementation 'com.jakewharton.timber:timber:5.0.1'
    implementation 'com.jakewharton:butterknife:10.1.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
    implementation 'com.google.android.gms:play-services-location:16.0.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    implementation 'fr.turri:aXMLRPC:1.12.0'
    implementation "com.anggrayudi:storage:0.13.0"
}

//https://github.com/JakeWharton/butterknife/issues/1686#issuecomment-1514927085
tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += [
    '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',

    '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
    '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
    '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
    '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
    '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
    '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
    '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
    '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
    '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
    ]
}
